# openttd-questdb-telemetry

./: .gitignore  README.md  docker-compose.yml
bridge/: Cargo.toml  Dockerfile
bridge/src/: main.rs
config/: demo.cfg  observe.cfg  play.cfg
gamescript/questdb_telemetry/: info.nut  main.nut
grafana/: generate_dashboards.py
grafana/dashboards/: openttd_economy.json  openttd_fleet.json  openttd_overview.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: questdb.yaml
questdb/console/: THIRD_PARTY_LICENSES.txt  index.html
questdb/console/assets/: index-CDeliJAB.js  index-DvvwG6yS.css  index-gTmR0rjJ.js  tiktoken-CKWQBQr-.js  vendor-B9_ld41D.js
questdb/notebook/: generate_notebook.py  openttd-telemetry-notebook.json
scripts/: install_gamescript.sh  run_demo.sh  seed_fake_data.py  stop_demo.sh
